# NFTminter

./: Untitled Diagram.drawio  cabal.project  minting-policy-purple.plutus  minting-policy-purples.plutus  plutus-pioneer-program-week05.cabal
NodeApp/: app.js  matx.raw  metaData  metaData.json  mintin_policy  minting_policy1.script  minting_policy2.script  nFTTx.body  nodeRun.js  node_run.txt  outFile  policyId
app/: plutus-minting-purple-example.hs
client/: package-lock.json
src/Week05/: .MintingScriptPurple.hs.swp  MintingScriptPurple.hs
