Cabal-Version:      2.4
Name:               plutus-pioneer-program-week05
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week05.MintingScriptPurple
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , bytestring
                     , serialise
                     , cardano-api
                     , cardano-ledger-alonzo



  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable plutus-minting-purple-example
  
  hs-source-dirs:       app
  main-is:              plutus-minting-purple-example.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        aeson
                      , base
                      , cardano-api                      
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , bytestring
                      , plutus-pioneer-program-week05